# fiinquant-trade-analytics

./: .gitignore  README.md  finance_report.py  get_data.py  main.ipynb  main.py  pyproject.toml  realtime.py  ta_metric.py
