[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiinquant-project"
version = "0.1.0"
description = "Demo project using FiinQuantX and ML libraries"
authors = [
    { name = "Vu Van Huy", email = "example@email.com" }
]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy==2.2.2",
    "ta-lib",
    "scikit-learn",
    "matplotlib",
    "requests",
    "urllib3",
]
